# DNA

./: .gitignore  CLAUDE.md  Makefile  README.md  flake.nix  pyproject.toml
data/: CREATED_2025-07-05.txt  rsid_positions_grch37.json
genetic_health/: __init__.py  __main__.py  acmg.py  alcohol_profile.py  analysis.py  ancestry.py  apoe.py  blood_type.py  carrier_screen.py  clinical_context.py  config.py  drug_dosing.py  epistasis.py  eye_health.py  histamine.py  hormone_metabolism.py  insights.py  loading.py  longevity.py  mental_health.py  mt_haplogroup.py  nutrigenomics.py  pain_sensitivity.py  pipeline.py  polypharmacy.py  preventive_care.py  prs.py  quality_metrics.py  recommendations.py  sleep_profile.py  snp_database.py  star_alleles.py  thyroid.py  traits.py  update_data.py  wgs_pipeline.py
genetic_health/reports/: __init__.py  enhanced_html.py  html_converter.py  markdown_reports.py  (+2 more)
scripts/: generate_exhaustive_report.py  rebuild_genome.py  report_generators.py  run_full_analysis.py  setup_reference.sh  wgs_pipeline.py
tests/: conftest.py  test_acmg.py  test_ancestry.py  test_apoe.py  test_blood_type.py  test_carrier_screen.py  test_disease_analysis.py  test_drug_dosing.py  test_epistasis.py  test_genome_loading.py  test_html_reports.py  test_insights.py  test_mt_haplogroup.py  test_new_modules.py  test_new_traits.py  test_path_resolution.py  test_preventive_care.py  test_prs.py  test_quality_metrics.py  test_recommendations.py  test_snp_analysis.py  test_star_alleles.py  test_traits.py  test_update_data.py  test_vcf_conversion.py  test_wgs_pipeline.py
