[project]
name = "genetic-health"
version = "1.0.0"
description = "Genetic health analysis pipeline: 23andMe/WGS data to health reports"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
genetic-health = "scripts.run_full_analysis:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
